--- a/css/estiloFormRegistro.css
+++ b/css/estiloFormRegistro.css
@@ -11,7 +11,8 @@
     background-repeat: no-repeat;
     padding: 10px;
     background-size: cover;
-    height: 100vh;   
+    height: 140vh;
+       
          }
        
           header{
@@ -24,10 +25,9 @@
 .contenido{
     display: flex;
     flex-direction: column;
-    height: 100%;
     align-items: center;
     background: #FFF;
-    
+    height: 100%;
 }
 .titulo{
     
@@ -85,10 +85,9 @@
 }
 @media(min-width:600px){
     .form1{ 
-    width: 600px;    
+       width: 600px; } 
+ .contenedor{
+        height: 140h;    
+        }
 }
-    .contenedor{
-    height: 100vh;
-   
-         }
-}
+    
