--- a/css/ingredientes.css
+++ b/css/ingredientes.css
@@ -12,8 +12,7 @@
     background-repeat: no-repeat;
     padding: 10px;
     background-size: cover;
-    background-image: url('../img/desgranado_con_adiciones_0.jpg');
-           height: 120vh;
+    height: 140vh;
          }
        
           header{
@@ -26,8 +25,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding:10px
-    
+    padding:10px;
+    height: 100%;
+    background: #fff;
 }
 .opciones{
     padding: 5px 5px;
@@ -35,6 +35,7 @@
     border-radius: 5px;
     background: rgba(0,0,0,.7);
     color: aliceblue;
+    width: 100%;
     
 }
 
